--- a/Mall/index.mjml
+++ b/Mall/index.mjml
@@ -50,7 +50,7 @@
       
       <mj-column>
       
-        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" padding="10px 25px" src="https://github.com/gasquek/email-marketing/blob/main/welcome-22-lp1/img/Gasque-statistik.png?raw=true" target="_blank" width="600px">
+        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" padding="10px 25px" src="https://github.com/klaranolemo/Email-mall/blob/9e6cc499fe220884125dba1b23968a9e4ee13234/Mall/Divider.png" target="_blank" width="600px">
         
         </mj-image>
         
