--- a/Mall/index.mjml
+++ b/Mall/index.mjml
@@ -16,17 +16,13 @@
           
         </mj-text>
         
+        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" src="Divider.png" target="_blank" width="600px">
+        
       </mj-column>
       
     </mj-section>
     
-   <mj-section>
-     
-    <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" src="Divider.png" target="_blank" width="600px">
-    
-    </mj-section>
-    
-    <mj-section background-color="#" background-repeat="repeat" padding-top="0px" padding="px 0" text-align="center">
+    <mj-section background-color="" background-repeat="repeat" padding-top="0px" padding="px 0" text-align="center">
       
     </mj-section>
     
@@ -46,7 +42,7 @@
       
     </mj-section>
       
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
       
       <mj-column>
       
@@ -57,18 +53,12 @@
       </mj-column>
       
     </mj-section>
-          
-        </mj-text>
-    
-      </mj-column>
-  
-    </mj-section>
         
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
       
       <mj-column>
       
-        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" padding="10px 25px" src="https://github.com/gasquek/email-marketing/blob/main/welcome-22-lp1/img/Divider.png?raw=true" target="_blank" width="600px">
+        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" src="Divider.png" target="_blank" width="600px">
         
         </mj-image>
         
@@ -76,13 +66,13 @@
       
     </mj-section>
 
-    <mj-section background-color="#ffffff" background-repeat="repeat" background-size="auto" padding-bottom="0px" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" background-size="auto" padding-bottom="0px" padding="20px 0" text-align="center">
       
       <mj-column>
       
         <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" font-size="30px" line-height="22px" padding-bottom="10px" padding-top="10px" padding="10px 25px">
         
-          <p style="font-weight: 600; line-height: 30px; margin: 10px 0; text-align: center; color:#151e23; font-size:30p; font-family:Helvetica,Arial,sans-serif"> Kommande evenemang </p>
+          <p style="font-weight: 600; line-height: 30px; margin: 10px 0; text-align: center; color:#ffffff; font-size:30p; font-family:Helvetica,Arial,sans-serif"> Kommande evenemang </p>
           
         </mj-text>
         
@@ -90,7 +80,7 @@
       
     </mj-section>
 
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding-bottom="0px" padding="0px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding="0px 0" text-align="center">
       
       </mj-column>
 
@@ -98,7 +88,7 @@
 
         <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" font-size="13px" line-height="22px" padding-bottom="0px" padding-left="40px" padding-right="40px" padding-top="15px" padding="10px 25px">
         
-          <p style="margin: 10px 0; color:#151e23; font-size:16px; font-family:Helvetica,Arial,sans-serif"> <b>Evenemang 1</b> </p>
+          <p style="margin: 10px 0; color:#ffffff; font-size:16px; font-family:Helvetica,Arial,sans-serif"> <b>Evenemang 1</b> </p>
           
           <p style="line-height: 16px; margin: 10px 0;font-size:14px; color:#151e23; font-family:Helvetica,Arial,sans-serif; color:#354552"> Spicy text här </p>
      
@@ -113,7 +103,7 @@ Anmälningsformuläret hittar ni här: </p>
 
  </mj-section>
 
- <mj-section background-color="#ffffff" background-repeat="repeat" padding-bottom="0px" padding-top="20px" padding="20px 0" text-align="center">
+ <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding-top="20px" padding="20px 0" text-align="center">
       
       <mj-column>
       
@@ -130,7 +120,7 @@ Anmälningsformuläret hittar ni här: </p>
     </mj-section>
 
 
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
       
       <mj-column>
       
@@ -143,16 +133,16 @@ Anmälningsformuläret hittar ni här: </p>
       </mj-column>
     </mj-section>
 
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
      
       <mj-column>
       
-        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" padding="10px 25px" src="https://github.com/gasquek/email-marketing/blob/main/welcome-22-lp1/img/Divider.png?raw=true" target="_blank" width="600px"> </mj-image>
+        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" src="Divider.png" target="_blank" width="600px">
      
       </mj-column>
     </mj-section>
 
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding-bottom="0px" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" text-align="center">
       
       <mj-column>
         
@@ -170,7 +160,7 @@ Anmälningsformuläret hittar ni här: </p>
           
     </mj-section>
         
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding="20px 0" text-align="center">
       
       <mj-column> 
   
@@ -180,16 +170,16 @@ Anmälningsformuläret hittar ni här: </p>
       </mj-column>
     </mj-section>
       
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
      
       <mj-column>
         
-        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" padding="10px 25px" src="https://github.com/gasquek/email-marketing/blob/main/welcome-22-lp1/img/Divider.png?raw=true" target="_blank" width="600px"> </mj-image>
+        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" src="Divider.png" target="_blank" width="600px">
      
       </mj-column>
     </mj-section>
       
-    <mj-section background-color="#ffffff" background-repeat="repeat" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" padding="20px 0" text-align="center">
       
       <mj-column>
         
