--- a/Mall/index.mjml
+++ b/Mall/index.mjml
@@ -65,12 +65,41 @@
       </mj-column>
       
     </mj-section>
+      
+       <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" text-align="center">
+      
+      <mj-column>
+        
+        <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" line-height="22px">
+          
+          <p style="font-size: 30px; margin: 20px 0 0 0; text-align: center; color:#ffffff; font-size:30p; font-weight: 600; font-family:Helvetica,Arial,sans-serif"> <b> Info från GK</b> </p>
+          
+          <p style="line-height: 16px; margin: 10px 0;font-size:14px;font-family:Helvetica,Arial,sans-serif; color:#ffffff"> Blablabla gött info </p>
+          
+        </mj-text>
+       
+        <mj-button href="https://forms.gle/vN1GNshem3FdC2Uo9" align="center" background-color="#5FA573" border-radius="3px" color="#ffffff" font-family="Helvetica, Arial, sans-serif" font-size="14px" font-weight="normal" inner-padding="10px 75px" padding="10px 25px" padding-bottom="40px" text-decoration="none" text-transform="none" vertical-align="middle"> Ännu en nice knapp </mj-button>
+       
+       
+        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" src="Divider.png" target="_blank" width="600px">
+       
+    </mj-section>
+        
+    <mj-section background-color="#030939" background-repeat="repeat" padding="20px 0" text-align="center">
+      
+      <mj-column> 
+        
+ 
+        
+        </mj-text>
+      </mj-column>
+    </mj-section>
 
-    <mj-section background-color="#030939" background-repeat="repeat" background-size="auto" padding-bottom="0px" padding="20px 0" text-align="center">
+    <mj-section background-color="#030939" background-repeat="repeat" background-size="auto" padding-bottom="0px" padding="0 0" text-align="center">
       
       <mj-column>
       
-        <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" font-size="30px" line-height="22px" padding-bottom="10px" padding-top="10px" padding="10px 25px">
+        <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" font-size="30px" line-height="22px" padding-bottom="0px" padding-top="0px">
         
           <p style="font-weight: 600; line-height: 30px; margin: 10px 0; text-align: center; color:#ffffff; font-size:30p; font-family:Helvetica,Arial,sans-serif"> Kommande evenemang </p>
           
@@ -86,20 +115,20 @@
 
       <mj-column>
 
-        <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" font-size="13px" line-height="22px" padding-bottom="0px" padding-left="40px" padding-right="40px" padding-top="15px" padding="10px 25px">
+        <mj-text align="left" color="#ffffff" font-family="Arial, sans-serif" font-size="13px" line-height="22px" padding-bottom="0px" padding-left="40px" padding-right="40px" padding-top="15px" padding="10px 25px">
         
-          <p style="margin: 10px 0; color:#ffffff; font-size:16px; font-family:Helvetica,Arial,sans-serif"> <b>Evenemang 1</b> </p>
+          <p style="margin: 10px 0; font-size:16px; font-family:Helvetica,Arial,sans-serif"> <b>Evenemang 1</b> </p>
           
-          <p style="line-height: 16px; margin: 10px 0;font-size:14px; color:#151e23; font-family:Helvetica,Arial,sans-serif; color:#354552"> Spicy text här </p>
+          <p style="line-height: 16px; margin: 10px 0;font-size:14px; font-family:Helvetica,Arial,sans-serif; color:"#"> Spicy text här </p>
      
-          <p style="line-height: 16px; margin: 10px 0;font-size:14px; color:#151e23; font-family:Helvetica,Arial,sans-serif; color:#354552">
+          <p style="line-height: 16px; margin: 10px 0;font-size:14px; font-family:Helvetica,Arial,sans-serif; color:"#">
 Ännu mer spicy text här </p>
             
 Anmälningsformuläret hittar ni här: </p>
             
            </mj-text>
 
-        <mj-button href="https://forms.gle/mHfnE7HUzb14fcKQ9" align="center" background-color="#5FA573" border-radius="3px" color="#ffffff" font-family="Helvetica, Arial, sans-serif" font-size="14px" font-weight="normal" inner-padding="10px 75px" padding="10px 25px" text-decoration="none" text-transform="none" vertical-align="middle"> Nice knapp, lägg in länk ovan </mj-button>
+        <mj-button href="https://forms.gle/mHfnE7HUzb14fcKQ9" align="center" background-color="#5FA573" border-radius="3px" color="#ffffff" font-family="Helvetica, Arial, sans-serif" font-size="14px" font-weight="normal" inner-padding="10px 75px" padding="10px 25px" text-decoration="none" text-transform="none" vertical-align="middle"> Nice knapp </mj-button>
 
  </mj-section>
 
@@ -107,12 +136,13 @@ Anmälningsformuläret hittar ni här: </p>
       
       <mj-column>
       
-        <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" font-size="13px" line-height="22px" padding-bottom="30px" padding-left="40px" padding-right="40px" padding-top="15px" padding="10px 25px">
-          <p style="margin: 10px 0; color:#151e23; font-size:16px; font-family:Helvetica,Arial,sans-serif"> <b>Evenemang 2</b></p>
+        <mj-text align="left" color="#ffffff" font-family="Arial, sans-serif" font-size="13px" line-height="22px" padding-bottom="30px" padding-left="40px" padding-right="40px" padding-top="15px" padding="10px 25px">
          
-          <p style="line-height: 16px; margin: 10px 0;font-size:14px; color:#151e23; font-family:Helvetica,Arial,sans-serif; color:#354552"> Nice text här   </p>
+          <p style="margin: 10px 0; color:#ffffff; font-size:16px; font-family:Helvetica,Arial,sans-serif"> <b>Evenemang 2</b></p>
+         
+          <p style="line-height: 16px; margin: 10px 0;font-size:14px; font-family:Helvetica,Arial,sans-serif; color:"#ffffff"> Nice text här   </p>
             
-         <p style="line-height: 16px; margin: 10px 0;font-size:14px; color:#151e23; font-family:Helvetica,Arial,sans-serif; color:#354552"> Ännu mer nice text här </p>
+         <p style="line-height: 16px; margin: 10px 0;font-size:14px;font-family:Helvetica,Arial,sans-serif; color:"#ffffff"> Ännu mer nice text här </p>
           
                    
         </mj-text>
@@ -124,51 +154,25 @@ Anmälningsformuläret hittar ni här: </p>
       
       <mj-column>
       
-        <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" font-size="13px" line-height="22px" padding-bottom="40px" padding-left="40px" padding-right="40px" padding-top="0px" padding="10px 25px">
-          <p style="margin: 10px 0; color:#151e23; font-size:16px; font-family:Helvetica,Arial,sans-serif"> <b>Evenemang 3</b></p>
+        <mj-text align="left" color="#ffffff" font-family="Arial, sans-serif" font-size="13px" line-height="22px" padding-bottom="40px" padding-left="40px" padding-right="40px" padding-top="0px" padding="10px 25px">
+          <p style="margin: 10px 0; font-size:16px; font-family:Helvetica,Arial,sans-serif"> <b>Evenemang 3</b></p>
          
-          <p style="line-height: 16px; margin: 10px 0;font-size:14px; color:#151e23; font-family:Helvetica,Arial,sans-serif; color:#354552"> Coolaste evenemanget här </p>
-         
+          <p style="line-height: 16px; margin: 10px 0;font-size:14px; font-family:Helvetica,Arial,sans-serif; color:"#ffffff"> Coolaste evenemanget här </p>
+      
+
+nån fin bild här under
+        <mj-image align="center" padding="10px 25px" src="" target="_blank" width="px"> </mj-image>
+          
         </mj-text>
       </mj-column>
     </mj-section>
 
     <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
      
-      <mj-column>
       
-        <mj-image align="center" padding-bottom="0px" padding-left="0px" padding-right="0px" padding-top="0px" src="Divider.png" target="_blank" width="600px">
-     
-      </mj-column>
     </mj-section>
 
-    <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" text-align="center">
-      
-      <mj-column>
-        
-        <mj-text align="left" color="#55575d" font-family="Arial, sans-serif" line-height="22px">
-          
-          <p style="font-size: 30px; margin: 20px 0 0 0; text-align: center; color:#ffffff; font-size:30p; font-weight: 600; font-family:Helvetica,Arial,sans-serif"> <b> Info från GK</b> </p>
-          
-          <p style="line-height: 16px; margin: 10px 0;font-size:14px;font-family:Helvetica,Arial,sans-serif; color:#ffffff"> Blablabla gött info </p>
-          
-        </mj-text>
-       
-        <mj-button href="https://forms.gle/vN1GNshem3FdC2Uo9" align="center" background-color="#5FA573" border-radius="3px" color="#ffffff" font-family="Helvetica, Arial, sans-serif" font-size="14px" font-weight="normal" inner-padding="10px 75px" padding="10px 25px" text-decoration="none" text-transform="none" vertical-align="middle"> Ännu en nice knapp </mj-button>
-       
-        <mj-text align="left" color="#55575d" font-family="Arial, sans-serif">
-          
-    </mj-section>
-        
-    <mj-section background-color="#030939" background-repeat="repeat" padding="20px 0" text-align="center">
-      
-      <mj-column> 
-  
-        <mj-image align="center" padding="10px 25px" src="https://github.com/gasquek/email-marketing/blob/main/welcome-22-lp1/img/Slasquen.jpg?raw=true" target="_blank" width="px"> </mj-image>
-        
-        </mj-text>
-      </mj-column>
-    </mj-section>
+   
       
     <mj-section background-color="#030939" background-repeat="repeat" padding-bottom="0px" padding-top="0px" padding="20px 0" text-align="center">
      
@@ -183,7 +187,7 @@ Anmälningsformuläret hittar ni här: </p>
       
       <mj-column>
         
-        <mj-image align="center" padding="10px 25px" src="https://github.com/gasquek/email-marketing/blob/main/welcome-22-lp1/img/GasqueK-logga.jpg?raw=true" target="_blank" width="400px"></mj-image>
+        <mj-image align="center" padding="10px 25px" src="https://raw.githubusercontent.com/klaranolemo/Email-mall/main/mail%20gk%20logga.png?token=GHSAT0AAAAAABZI2VSF72K3RMCHGDWAXUYYYZUN2EQ" target="_blank" width="400px"></mj-image>
         
         
       </mj-column>
