--- a/Mall/index.mjml
+++ b/Mall/index.mjml
@@ -34,7 +34,7 @@
         
           <p style="font-size: 30px; line-height: 30px; margin: 20px 0 0 0; text-align: center; color:#ffffff;  font-size:30p; font-weight: 600; font-family:Helvetica,Arial,sans-serif"> Insert fun shit here </p>
           
-          <p style="font-size: 20px; line-height: 30px; text-align: center; color:#d9d9d9; font-size:20p; font-weight: 300; font-family:Helvetica,Arial,sans-serif"> Nice text och kanske image nedan </p>
+          <p style="font-size: 14px; line-height: 30px; text-align: center; color:#d9d9d9; font-weight: 300; font-family:Helvetica,Arial,sans-serif"> Nice text och kanske image nedan </p>
         
         </mj-text>
         
@@ -74,7 +74,7 @@
           
           <p style="font-size: 30px; margin: 20px 0 0 0; text-align: center; color:#ffffff; font-size:30p; font-weight: 600; font-family:Helvetica,Arial,sans-serif"> <b> Info från GK</b> </p>
           
-          <p style="line-height: 16px; margin: 10px 0;font-size:14px;font-family:Helvetica,Arial,sans-serif; color:#ffffff"> Blablabla gött info </p>
+          <p style="line-height: 16px; margin: 10px 0;font-size:11px;font-family:Helvetica,Arial,sans-serif; color:#ffffff"> Blablabla gött info </p>
           
         </mj-text>
        
